@@ -1,0 +1,7 @@
+html {
+	--bg-page: #1b2735;
+	--bg-dark: #121a24;
+	--fg: #b9b9ba;
+	--hl: #d8a070;
+	--fg-subtle: rgba(185, 185, 186, 0.5);
+}
